// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders a provided fallback icon override 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <svg
      aria-hidden="true"
      class="octicon octicon-copilot"
      data-component="Octicon"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M7.998 15.035c-4.562 0-7.873-2.914-7.998-3.749V9.338c.085-.628.677-1.686 1.588-2.065.013-.07.024-.143.036-.218.029-.183.06-.384.126-.612-.201-.508-.254-1.084-.254-1.656 0-.87.128-1.769.693-2.484.579-.733 1.494-1.124 2.724-1.261 1.206-.134 2.262.034 2.944.765.05.053.096.108.139.165.044-.057.094-.112.143-.165.682-.731 1.738-.899 2.944-.765 1.23.137 2.145.528 2.724 1.261.566.715.693 1.614.693 2.484 0 .572-.053 1.148-.254 1.656.066.228.098.429.126.612.012.076.024.148.037.218.924.385 1.522 1.471 1.591 2.095v1.872c0 .766-3.351 3.795-8.002 3.795Zm0-1.485c2.28 0 4.584-1.11 5.002-1.433V7.862l-.023-.116c-.49.21-1.075.291-1.727.291-1.146 0-2.059-.327-2.71-.991A3.222 3.222 0 0 1 8 6.303a3.24 3.24 0 0 1-.544.743c-.65.664-1.563.991-2.71.991-.652 0-1.236-.081-1.727-.291l-.023.116v4.255c.419.323 2.722 1.433 5.002 1.433ZM6.762 2.83c-.193-.206-.637-.413-1.682-.297-1.019.113-1.479.404-1.713.7-.247.312-.369.789-.369 1.554 0 .793.129 1.171.308 1.371.162.181.519.379 1.442.379.853 0 1.339-.235 1.638-.54.315-.322.527-.827.617-1.553.117-.935-.037-1.395-.241-1.614Zm4.155-.297c-1.044-.116-1.488.091-1.681.297-.204.219-.359.679-.242 1.614.091.726.303 1.231.618 1.553.299.305.784.54 1.638.54.922 0 1.28-.198 1.442-.379.179-.2.308-.578.308-1.371 0-.765-.123-1.242-.37-1.554-.233-.296-.693-.587-1.713-.7Z"
      />
      <path
        d="M6.25 9.037a.75.75 0 0 1 .75.75v1.501a.75.75 0 0 1-1.5 0V9.787a.75.75 0 0 1 .75-.75Zm4.25.75v1.501a.75.75 0 0 1-1.5 0V9.787a.75.75 0 0 1 1.5 0Z"
      />
    </svg>
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when no src url - human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <svg
      aria-hidden="true"
      class="octicon octicon-feed-person"
      data-component="Octicon"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
      />
    </svg>
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when no src url - non human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <svg
      aria-hidden="true"
      class="octicon octicon-mark-github"
      data-component="Octicon"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M6.766 11.328c-2.063-.25-3.516-1.734-3.516-3.656 0-.781.281-1.625.75-2.188-.203-.515-.172-1.609.063-2.062.625-.078 1.468.25 1.968.703.594-.187 1.219-.281 1.985-.281.765 0 1.39.094 1.953.265.484-.437 1.344-.765 1.969-.687.218.422.25 1.515.046 2.047.5.593.766 1.39.766 2.203 0 1.922-1.453 3.375-3.547 3.64.531.344.89 1.094.89 1.954v1.625c0 .468.391.734.86.547C13.781 14.359 16 11.53 16 8.03 16 3.61 12.406 0 7.984 0 3.563 0 0 3.61 0 8.031a7.88 7.88 0 0 0 5.172 7.422c.422.156.828-.125.828-.547v-1.25c-.219.094-.5.156-.75.156-1.031 0-1.64-.562-2.078-1.609-.172-.422-.36-.672-.719-.719-.187-.015-.25-.093-.25-.187 0-.188.313-.328.625-.328.453 0 .844.281 1.25.86.313.452.64.655 1.031.655s.641-.14 1-.5c.266-.265.47-.5.657-.656"
      />
    </svg>
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when the image fails to load (isBroken = true) - human user 1`] = `
<div
  class="prc-Stack-Stack-UQ9k6"
  data-align="center"
  data-component="Stack"
  data-direction="horizontal"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-testid="avatar"
  data-wrap="nowrap"
>
  <svg
    aria-hidden="true"
    class="octicon octicon-feed-person"
    data-component="Octicon"
    display="inline-block"
    fill="currentColor"
    focusable="false"
    height="16"
    overflow="visible"
    style="vertical-align: text-bottom;"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
    />
  </svg>
  <div
    class="prc-Truncate-Truncate-2G1eo"
    data-inline="true"
    style="--truncate-max-width: 280px;"
    title="@gitify-app"
  >
    @gitify-app
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when the image fails to load (isBroken = true) - non human user 1`] = `
<div
  class="prc-Stack-Stack-UQ9k6"
  data-align="center"
  data-component="Stack"
  data-direction="horizontal"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-testid="avatar"
  data-wrap="nowrap"
>
  <svg
    aria-hidden="true"
    class="octicon octicon-mark-github"
    data-component="Octicon"
    display="inline-block"
    fill="currentColor"
    focusable="false"
    height="16"
    overflow="visible"
    style="vertical-align: text-bottom;"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M6.766 11.328c-2.063-.25-3.516-1.734-3.516-3.656 0-.781.281-1.625.75-2.188-.203-.515-.172-1.609.063-2.062.625-.078 1.468.25 1.968.703.594-.187 1.219-.281 1.985-.281.765 0 1.39.094 1.953.265.484-.437 1.344-.765 1.969-.687.218.422.25 1.515.046 2.047.5.593.766 1.39.766 2.203 0 1.922-1.453 3.375-3.547 3.64.531.344.89 1.094.89 1.954v1.625c0 .468.391.734.86.547C13.781 14.359 16 11.53 16 8.03 16 3.61 12.406 0 7.984 0 3.563 0 0 3.61 0 8.031a7.88 7.88 0 0 0 5.172 7.422c.422.156.828-.125.828-.547v-1.25c-.219.094-.5.156-.75.156-1.031 0-1.64-.562-2.078-1.609-.172-.422-.36-.672-.719-.719-.187-.015-.25-.093-.25-.187 0-.188.313-.328.625-.328.453 0 .844.281 1.25.86.313.452.64.655 1.031.655s.641-.14 1-.5c.266-.265.47-.5.657-.656"
    />
  </svg>
  <div
    class="prc-Truncate-Truncate-2G1eo"
    data-inline="true"
    style="--truncate-max-width: 280px;"
    title="@gitify-app"
  >
    @gitify-app
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > should render avatar - human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <img
      alt="gitify-app"
      class="prc-Avatar-Avatar-0xaUi"
      data-component="Avatar"
      height="16"
      src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
      style="--avatarSize-regular: 16px;"
      width="16"
    />
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > should render avatar - non-human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <img
      alt="gitify-app"
      class="prc-Avatar-Avatar-0xaUi"
      data-component="Avatar"
      data-square=""
      height="16"
      src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
      style="--avatarSize-regular: 16px;"
      width="16"
    />
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;
